--- a/Assignment1/CO3094-weaprous/www/unauthorize.html
+++ b/Assignment1/CO3094-weaprous/www/unauthorize.html
@@ -8,6 +8,6 @@
 <body>
     <h1>401 Unauthorized</h1>
     <p>Access denied. Please log in.</p>
-    <a href="login.html">Return to Login</a>
+    <a href="/login.html">Return to Login</a>
 </body>
 </html>
